add images. Update code style

--- a/src/components/Row/Row.mdx
+++ b/src/components/Row/Row.mdx
@@ -1,5 +1,5 @@
 import { Meta, Primary, Controls, Story } from '@storybook/blocks';
-import * as RowStories from './Row.stories';
+import * as RowStories from './row.stories';
 
 <Meta of={RowStories} />
 
