--- a/src/components/Button/Button.mdx
+++ b/src/components/Button/Button.mdx
@@ -1,4 +1,4 @@
-import { Meta, Primary, Controls, Story } from '@storybook/blocks';
+import { Meta, Primary, Controls } from '@storybook/blocks';
 import * as ButtonStories from './button.stories';
 
 <Meta of={ButtonStories} />
