--- a/src/components/Row/Row.mdx
+++ b/src/components/Row/Row.mdx
@@ -1,4 +1,4 @@
-import { Meta, Primary, Controls, Story } from '@storybook/blocks';
+import { Meta, Primary, Controls } from '@storybook/blocks';
 import * as RowStories from './row.stories';
 
 <Meta of={RowStories} />
