--- a/src/components/Checkbox/checkbox.mdx
+++ b/src/components/Checkbox/checkbox.mdx
@@ -1,9 +1,9 @@
 import { Meta, Primary, Controls } from '@storybook/blocks';
-import * as CheckboxStories from './checkbox.stories';
+import * as CheckboxStories from './Checkbox.stories';
 
 <Meta of={CheckboxStories} />
 
-# TextField
+# Checkbox
 
 <Primary />
 
