--- a/src/components/Image/Image.mdx
+++ b/src/components/Image/Image.mdx
@@ -1,9 +1,9 @@
 import { Meta, Primary, Controls } from '@storybook/blocks';
-import * as ImageStories from './image.stories';
+import * as ImageStories from './Image.stories';
 
 <Meta of={ImageStories} />
 
-# Row
+# Image
 
 <Primary />
 
