--- a/src/components/Text/text.mdx
+++ b/src/components/Text/text.mdx
@@ -1,9 +1,9 @@
 import { Meta, Primary, Controls } from '@storybook/blocks';
-import * as TextStories from './text.stories';
+import * as TextStories from './Text.stories';
 
 <Meta of={TextStories} />
 
-# Row
+# Text
 
 <Primary />
 
