--- a/src/components/TextField/textField.mdx
+++ b/src/components/TextField/textField.mdx
@@ -1,5 +1,5 @@
 import { Meta, Primary, Controls, Story } from '@storybook/blocks';
-import * as TextFieldStories from './textField.stories';
+import * as TextFieldStories from './TextField.stories';
 
 <Meta of={TextFieldStories} />
 
