--- a/src/components/Button/Button.mdx
+++ b/src/components/Button/Button.mdx
@@ -1,5 +1,5 @@
 import { Meta, Primary, Controls } from '@storybook/blocks';
-import * as ButtonStories from './button.stories';
+import * as ButtonStories from './Button.stories';
 
 <Meta of={ButtonStories} />
 
