--- a/src/components/atoms/TextField/TextField.mdx
+++ b/src/components/atoms/TextField/TextField.mdx
@@ -1,4 +1,4 @@
-import { Meta, Primary, Controls, Story } from '@storybook/blocks';
+import { Meta, Primary, Controls } from '@storybook/blocks';
 import * as TextFieldStories from './TextField.stories';
 
 <Meta of={TextFieldStories} />
