complete characters filters
- add Radio cmp/test/stories
- add useFilters hook/docs/test
- enhacne Checkbox/Select cmp/tests
- extend flex utility classnames
- extend consts/types

--- a/src/assets/styles/cssUtility.mdx
+++ b/src/assets/styles/cssUtility.mdx
@@ -130,6 +130,8 @@ Additional classes have their own modifiers, which are abbreviated values ​​
     - **stretch** - `stretch`
 - **gap**
     - **0-10** - in scss come calculation. Number multiple 0.125rem
+- **grow**
+    - **1-2** `flex-grow: <1-2>`
 
 ---
 
