update css utility classnames

--- a/src/assets/styles/cssUtility.mdx
+++ b/src/assets/styles/cssUtility.mdx
@@ -16,11 +16,11 @@ import { Meta, Canvas } from '@storybook/addon-docs/blocks'
 <h2 id="Colors">Colors</h2>
 
 <ul>
-    <li><span style={{border: '1px solid black'}} className="bg--white text--white">\_\_\_</span> - #FFFFFF</li>
-    <li><span style={{border: '1px solid black'}} className="bg--black text--black">\_\_\_</span> - #000000</li>
-    <li><span style={{border: '1px solid black'}} className="bg--primary text--primary">\_\_\_</span> - #D3FD53</li>
-    <li><span style={{border: '1px solid black'}} className="bg--secondary text--secondary">\_\_\_</span> - #25A043</li>
-    <li><span style={{border: '1px solid black'}} className="bg--red text--red">\_\_\_</span> - #E70B0B</li>
+    <li><span style={{border: '1px solid black'}} className="bg--white text--white">\_\_\_</span> - white - #FFFFFF</li>
+    <li><span style={{border: '1px solid black'}} className="bg--black text--black">\_\_\_</span> - black - #000000</li>
+    <li><span style={{border: '1px solid black'}} className="bg--primary text--primary">\_\_\_</span> - primary - #D3FD53</li>
+    <li><span style={{border: '1px solid black'}} className="bg--secondary text--secondary">\_\_\_</span> - secondary - #25A043</li>
+    <li><span style={{border: '1px solid black'}} className="bg--red text--red">\_\_\_</span> - red - #E70B0B</li>
 </ul>
 
 ---
@@ -82,8 +82,8 @@ import { Meta, Canvas } from '@storybook/addon-docs/blocks'
 
 **Examples**
 
--- **text--white** - `{color: '#FFFFFF'}`
--- **text--blackk** - `{color: '#000000'}`
+- **text--white** - `{color: '#FFFFFF'}`
+- **text--blackk** - `{color: '#000000'}`
 
 ---
 
