Utility functions rename

--- a/src/utils/helpers.mdx
+++ b/src/utils/helpers.mdx
@@ -1,15 +1,15 @@
 import { Meta, Story, Props } from '@storybook/addon-docs/blocks'
 
-<Meta title="Helpers" />
+<Meta title="Utility" />
 
-# Common help functions.
+# Utilities functions.
 
 - [cn](#cn) - function
 - [parseObjectToParamsString](#parseObjectToParamsString) - function
 - [TypeCheck](#TypeCheck) - class
-- [StringHelpers](#StringHelpers) - class
-- [ArrayHelpers](#ArrayHelpers) - class
-- [ObjectHelpers](#ObjectHelpers) - class
+- [StringUtilFn](#StringUtilFn) - class
+- [ArrayUtilFn](#ArrayUtilFn) - class
+- [ObjectUtilFn](#ObjectUtilFn) - class
 - [UnitTestHelper](#UnitTestHelper) - class
 
 <h2 id="cn">cn</h2>
@@ -127,7 +127,7 @@ isNull(null) // output: true
 
 ---
 
-<h2 id="StringHelpers">StringHelpers</h2>
+<h2 id="StringUtilFn">StringUtilFn</h2>
 
 #### Description
 
@@ -156,7 +156,7 @@ isOnlyWhiteSpaceString('a') //output: false
 
 ---
 
-<h2 id="ArrayHelpers">ArrayHelpers</h2>
+<h2 id="ArrayUtilFn">ArrayUtilFn</h2>
 
 #### Description
 
@@ -179,7 +179,7 @@ isEmptyArray([1, 2]) // output: false
 
 ---
 
-<h2 id="ObjectHelpers">ObjectHelpers</h2>
+<h2 id="ObjectUtilFn">ObjectUtilFn</h2>
 
 #### Description
 
